网路连接地址初始化及修改部分冗余代码！

--- a/app/src/main/res/layout/item_header.xml
+++ b/app/src/main/res/layout/item_header.xml
@@ -5,6 +5,7 @@
     android:text="2015-06-03"
     android:gravity="center_vertical|left"
     android:paddingLeft="16dp"
+    android:paddingRight="16dp"
     android:textStyle="bold"
     android:textColor="@color/textColorPrimary"
     android:paddingTop="16dp"
