--- a/app/src/main/res/layout/activity_car_info_detail.xml
+++ b/app/src/main/res/layout/activity_car_info_detail.xml
@@ -24,7 +24,7 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
             <ImageView
                 android:src="@drawable/default_car"
                 android:scaleType="fitXY"
