--- a/app/src/main/res/layout/top_bar.xml
+++ b/app/src/main/res/layout/top_bar.xml
@@ -26,15 +26,14 @@
     <TextView
         android:gravity="center"
         android:id="@+id/top_bar_tv_2"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="20dp"
         android:padding="0dp"
-        android:layout_margin="0dp"
         android:layout_toLeftOf="@+id/top_bar_tv_3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <TextView
         android:gravity="center"
-        android:layout_marginLeft="@dimen/top_bar_margin_horizontal"
-        android:layout_marginRight="@dimen/top_bar_margin_horizontal"
         android:padding="0dp"
         android:layout_margin="0dp"
         android:id="@+id/top_bar_tv_3"
@@ -44,9 +43,9 @@
 
     <TextView
         android:id="@+id/top_bar_tv_4"
+        android:layout_marginLeft="20dp"
         android:layout_centerVertical="true"
         android:padding="0dp"
-        android:layout_margin="0dp"
         android:gravity="center"
         android:layout_toRightOf="@+id/top_bar_tv_3"
         android:layout_width="wrap_content"
