--- a/app/src/main/res/layout/fragment_personcenter_main.xml
+++ b/app/src/main/res/layout/fragment_personcenter_main.xml
@@ -21,8 +21,7 @@
             android:paddingRight="@dimen/top_bar_padding"
             android:background="@color/carkeeper_main_color"
             custom:top_bar_tv_1_bg="@drawable/menu"
-            custom:top_bar_tv_1_textColor="@color/carkeeper_text_color"
-            custom:top_bar_tv_1_textSize="24.0" />
+            custom:top_bar_tv_1_textColor="@color/carkeeper_text_color" />
 
         <RelativeLayout
             android:layout_width="match_parent"
