--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -23,6 +23,7 @@
     <dimen name="font_size_11">11sp</dimen>
     <dimen name="font_size_14">14sp</dimen>
     <dimen name="font_size_16">16sp</dimen>
+    <dimen name="font_size_20">20sp</dimen>
     <dimen name="font_size_24">24sp</dimen>
     <dimen name="font_size_25">25sp</dimen>
 
