--- a/app/src/main/res/layout/activity_recover_password.xml
+++ b/app/src/main/res/layout/activity_recover_password.xml
@@ -34,7 +34,7 @@
         android:layout_weight="105"
         android:background="@drawable/bg_round">
         <AutoCompleteTextView
-            android:id="@+id/telephone_num"
+            android:id="@+id/recover_password_telephone_num"
             android:layout_marginTop="24dp"
             android:textColor="@color/textColorPrimary"
             android:textColorHint="@color/text_hint"
@@ -52,7 +52,7 @@
             android:singleLine="true" />
 
         <AutoCompleteTextView
-            android:id="@+id/password"
+            android:id="@+id/recover_password_password"
             android:textColor="@color/textColorPrimary"
             android:textColorHint="@color/text_hint"
             android:layout_marginTop="8dp"
@@ -77,12 +77,12 @@
             android:layout_marginRight="24dp"
             android:layout_marginTop="8dp">
             <AutoCompleteTextView
-                android:id="@+id/check_code"
+                android:id="@+id/recover_password_check_code"
                 android:textColor="@color/textColorPrimary"
                 android:textColorHint="@color/text_hint"
                 android:drawablePadding="12dp"
-                android:paddingLeft="@dimen/textView_padding"
-                android:paddingRight="@dimen/textView_padding"
+                android:paddingLeft="8dp"
+                android:paddingRight="96dp"
                 android:drawableLeft="@drawable/login_psw_selector"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -90,15 +90,19 @@
                 android:hint="@string/check_code"
                 android:singleLine="true" />
             <TextView
+                android:id="@+id/recover_password_get_check_code"
                 android:background="@drawable/get_code_light"
                 android:layout_gravity="right"
-                android:paddingRight="96dp"
-                android:layout_marginRight="@dimen/checkCode_margin_right"
+                android:gravity="center"
+                android:textColor="@color/carkeeper_main_color"
+                android:textSize="@dimen/font_size_11"
+                android:layout_marginRight="8dp"
                 android:layout_width="80dp"
                 android:layout_height="32dp" />
         </FrameLayout>
 
         <com.andexert.library.RippleView
+            android:id="@+id/rv_recover_password_commit"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginTop="40dp"
@@ -109,7 +113,6 @@
             custom:rv_color="#000000"
             custom:rv_centered="false">
             <Button
-                android:id="@+id/commit"
                 android:background="@color/carkeeper_main_color"
                 android:text="@string/commit"
                 android:textColor="@color/carkeeper_text_color"
