--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -67,4 +67,7 @@
     <color name="music_name_color">#212121</color>
     <color name="music_person_color">#727272</color>
     <color name="music_main_bg">#FAFAFA</color>
+
+    <!--预约加油模块-->
+    <color name="gas_reservation_text_color">#666666</color>
 </resources>
